--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Layar Awal (Input Nama & Pilih Fase) -->
     <div id="start-screen" class="screen active">
         <div class="start-box">
-            <img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d7/Who_Wants_to_Be_a_Millionaire%3F_%28logo%29.svg/1200px-Who_Wants_to_Be_a_Millionaire%3F_%28logo%29.svg.png" alt="Logo Kuis" class="logo-spinning">
+            <img src="logo.png" alt="Logo Kuis" class="logo-spinning">
             
             <!-- Info Kuis Kustom (muncul jika link #hash ada) -->
             <div id="custom-game-info" class="hidden">
