--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+    <!-- Layar Awal (Tidak ada perubahan) -->
     <div id="start-screen" class="screen active">
         <div class="start-box">
             <img src="logo.png" 
@@ -56,6 +57,7 @@
                 <button id="view-scores-btn">Tampilkan Skor</button>
             </div>
 
+            <!-- Modal Petunjuk -->
             <div id="how-to-modal" class="modal-overlay">
                 <div class="modal-content-small">
                     <h3>Cara Membuat Link CSV</h3>
@@ -72,6 +74,7 @@
                 </div>
             </div>
 
+            <!-- Modal Link Kustom -->
             <div id="share-link-modal" class="modal-overlay">
                 <div class="modal-content-small">
                     <h3>Link Kuis Kustom Berhasil Dibuat!</h3>
@@ -82,6 +85,7 @@
                 </div>
             </div>
 
+            <!-- Modal Tampilan Skor Host -->
             <div id="score-view-modal" class="modal-overlay">
                 <div class="modal-content-large">
                     <h3>Hasil Kuis Kustom</h3>
@@ -108,6 +112,7 @@
         </div>
     </div>
 
+    <!-- Layar Permainan -->
     <div id="game-screen" class="screen">
         <div class="game-container">
             <div class="quiz-main">
@@ -123,6 +128,7 @@
                     <div id="question-container">
                         <p id="question-text">Pertanyaan akan muncul di sini...</p>
                     </div>
+                    <!-- Opsi akan dibuat oleh JavaScript di sini -->
                     <div id="options-container"></div>
                 </div>
             </div>
@@ -132,6 +138,7 @@
             </div>
         </div>
 
+        <!-- Modal Konfirmasi Jawaban -->
         <div id="confirm-modal" class="modal-overlay">
              <div class="modal-content">
                 <p>Yakin dengan jawaban anda?</p>
@@ -140,23 +147,27 @@
             </div>
         </div>
 
+        <!-- ***** PERUBAHAN v13: Alur Modal Telepon Diperbaiki ***** -->
         <div id="phone-modal" class="modal-overlay">
             <div class="modal-content-small">
                 <h3 id="phone-title">Bantuan Telepon</h3>
                 
-                <div id="phone-dialing-screen">
-                    <p>Menghubungi...</p>
+                <!-- Layar 1: Pilihan Kontak (Default) -->
+                <div id="phone-contact-grid">
+                    <div class="phone-contact" data-contact="friend1"><img src="friend1.png" alt="Teman 1"><span>Teman 1</span></div>
+                    <div class="phone-contact" data-contact="friend2"><img src="friend2.png" alt="Teman 2"><span>Teman 2</span></div>
+                    <div class="phone-contact" data-contact="friend3"><img src="friend3.png" alt="Teman 3"><span>Teman 3</span></div>
+                    <div class="phone-contact" data-contact="expert"><img src="Ahli"><span>Ahli</span></div>
+                </div>
+
+                <!-- Layar 2: Simulasi Dialing (Awalnya tersembunyi) -->
+                <div id="phone-dialing-screen" class="hidden">
+                    <p id="dialing-status">Menghubungi...</p>
                     <div class="phone-icon">📞</div>
                     <p>Waktu tersisa: <span id="dialing-timer">10</span> detik</p>
                 </div>
 
-                <div id="phone-contact-grid" class="hidden">
-                    <div class="phone-contact" data-contact="friend1"><img src="friend1.png" alt="Teman 1"><span>Teman 1</span></div>
-                    <div class="phone-contact" data-contact="friend2"><img src="friend2.png" alt="Teman 2"><span>Teman 2</span></div>
-                    <div class="phone-contact" data-contact="friend3"><img src="friend3.png" alt="Teman 3"><span>Teman 3</span></div>
-                    <div class="phone-contact" data-contact="expert"><img src="expert.png" alt="Ahli"><span>Ahli</span></div>
-                </div>
-
+                <!-- Layar 3: Jawaban (Awalnya tersembunyi) -->
                 <div id="phone-response-area" class="hidden">
                     <p id="phone-response-text">...</p>
                     <button id="close-phone-modal-btn">Tutup</button>
@@ -164,22 +175,26 @@
             </div>
         </div>
 
+        <!-- Modal Statistik Polling -->
         <div id="poll-modal" class="modal-overlay">
             <div class="modal-content-small">
                 <h3>Hasil Polling Penonton</h3>
                 <div id="poll-chart-container">
-                    </div>
+                    <!-- Diagram batang akan dibuat oleh JS di sini -->
+                </div>
                 <button id="close-poll-modal-btn">Tutup</button>
             </div>
         </div>
 
     </div>
 
+    <!-- Elemen Audio -->
     <audio id="opening-audio" src="opening.mp3"></audio>
     <audio id="bg-audio" src="musik.mp3" loop></audio>
     <audio id="correct-audio" src="benar.mp3"></audio>
     <audio id="wrong-audio" src="salah.mp3"></audio>
 
+    <!-- Library Eksternal -->
     <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script>
     <script type="module" src="script.js"></script>
 </body>
