--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
         <div id="confirm-modal" class="modal-overlay">
              <div class="modal-content">
-                <p>Yakin?</p>
+                <p>Yakin dengan Jawaban anda?
+                </p>
                 <button id="confirm-yes">YA</button>
                 <button id="confirm-no">TIDAK</button>
             </div>
@@ -172,3 +173,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
