--- a/index.html
+++ b/index.html
@@ -104,24 +104,35 @@
         <div class="game-container">
             <div class="quiz-main">
                 
-                <!-- ***** PERUBAHAN v28: AREA IKLAN DI ATAS ***** -->
+                <!-- ***** AREA ATAS DENGAN LINK SHOPEE ***** -->
                 <div class="top-bar">
-                    <!-- Iklan Kiri -->
+                    
+                    <!-- Link Kiri -->
                     <div class="ad-space left">
-                        <span>IKLAN</span>
-                        <!-- Tempel Kode Iklan Anda Di Sini -->
+                        <a href="https://id.shp.ee/yV4nP7v" target="_blank" class="shopee-btn">
+                            <span class="shopee-icon">🛍️</span>
+                            <div class="shopee-text">
+                                <span class="promo-title">Belanja Disini</span>
+                                <span class="promo-sub">Diskon Spesial</span>
+                            </div>
+                        </a>
                     </div>
 
                     <!-- Timer (Tengah) -->
                     <div id="timer">60</div>
 
-                    <!-- Iklan Kanan -->
+                    <!-- Link Kanan (Bisa link beda atau sama) -->
                     <div class="ad-space right">
-                        <span>IKLAN</span>
-                        <!-- Tempel Kode Iklan Anda Di Sini -->
+                        <a href="https://id.shp.ee/yV4nP7v" target="_blank" class="shopee-btn">
+                            <span class="shopee-icon">🎁</span>
+                            <div class="shopee-text">
+                                <span class="promo-title">Promo Seru</span>
+                                <span class="promo-sub">Cek Sekarang</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
-                <!-- ******************************************* -->
+                <!-- **************************************** -->
 
                 <div class="qa-container">
                     <div id="question-container">
@@ -148,7 +159,6 @@
                 <button id="confirm-no">TIDAK</button>
             </div>
         </div>
-
         <div id="phone-modal" class="modal-overlay">
             <div class="modal-content-small">
                 <h3 id="phone-title">Bantuan Telepon</h3>
@@ -169,7 +179,6 @@
                 </div>
             </div>
         </div>
-
         <div id="poll-modal" class="modal-overlay">
             <div class="modal-content-small">
                 <h3>Polling Penonton</h3>
@@ -177,6 +186,13 @@
                 <button id="close-poll-modal-btn">Tutup</button>
             </div>
         </div>
+    </div>
+
+    <!-- Wadah Iklan Bawah (Opsional, bisa dipakai nanti) -->
+    <div id="ad-container">
+         <a href="https://id.shp.ee/yV4nP7v" target="_blank" style="text-decoration: none; color: #333; font-weight: bold;">
+            Klik Disini untuk Promo Shopee Menarik!
+         </a>
     </div>
 
     <audio id="opening-audio" src="opening.mp3"></audio>
