--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
         <div class="game-container">
             <div class="quiz-main">
                 
-                <!-- ***** AREA ATAS DENGAN LINK SHOPEE ***** -->
+                <!-- ***** AREA ATAS: SHOPEE (Kiri) & TOKOPEDIA (Kanan) ***** -->
                 <div class="top-bar">
                     
-                    <!-- Link Kiri -->
+                    <!-- Link Kiri (Shopee) -->
                     <div class="ad-space left">
                         <a href="https://id.shp.ee/yV4nP7v" target="_blank" class="shopee-btn">
                             <span class="shopee-icon">🛍️</span>
-                            <div class="shopee-text">
-                                <span class="promo-title">Belanja Disini</span>
-                                <span class="promo-sub">Diskon Spesial</span>
+                            <div class="ad-text">
+                                <span class="promo-title">Shopee</span>
+                                <span class="promo-sub">Cek Promo</span>
                             </div>
                         </a>
                     </div>
@@ -121,18 +121,18 @@
                     <!-- Timer (Tengah) -->
                     <div id="timer">60</div>
 
-                    <!-- Link Kanan (Bisa link beda atau sama) -->
+                    <!-- Link Kanan (Tokopedia) -->
                     <div class="ad-space right">
-                        <a href="https://id.shp.ee/yV4nP7v" target="_blank" class="shopee-btn">
-                            <span class="shopee-icon">🎁</span>
-                            <div class="shopee-text">
-                                <span class="promo-title">Promo Seru</span>
-                                <span class="promo-sub">Cek Sekarang</span>
+                        <a href="https://tk.tokopedia.com/ZSfNbeWsu/" target="_blank" class="tokopedia-btn">
+                            <span class="shopee-icon">💚</span> <!-- Ikon Hati Hijau/Tas -->
+                            <div class="ad-text">
+                                <span class="promo-title">Tokopedia</span>
+                                <span class="promo-sub">Belanja Sekarang</span>
                             </div>
                         </a>
                     </div>
                 </div>
-                <!-- **************************************** -->
+                <!-- ******************************************************** -->
 
                 <div class="qa-container">
                     <div id="question-container">
@@ -188,12 +188,7 @@
         </div>
     </div>
 
-    <!-- Wadah Iklan Bawah (Opsional, bisa dipakai nanti) -->
-    <div id="ad-container">
-         <a href="https://id.shp.ee/yV4nP7v" target="_blank" style="text-decoration: none; color: #333; font-weight: bold;">
-            Klik Disini untuk Promo Shopee Menarik!
-         </a>
-    </div>
+    <!-- AREA BAWAH BERSIH (TIDAK ADA IKLAN) -->
 
     <audio id="opening-audio" src="opening.mp3"></audio>
     <audio id="bg-audio" src="musik.mp3" loop></audio>
