--- a/index.html
+++ b/index.html
@@ -104,35 +104,23 @@
         <div class="game-container">
             <div class="quiz-main">
                 
-                <!-- ***** AREA ATAS: KIRI & KANAN DINAMIS ***** -->
+                <!-- ***** AREA ATAS BARU (v38) ***** -->
                 <div class="top-bar">
-                    
-                    <!-- IKLAN KIRI (Dinamis) -->
-                    <div class="ad-space left">
-                        <a id="dynamic-ad-link-left" href="#" target="_blank" class="dynamic-ad-btn">
-                            <span id="dynamic-ad-icon-left" class="shopee-icon">✨</span>
-                            <div class="ad-text">
-                                <span id="dynamic-ad-title-left" class="promo-title">Loading...</span>
-                                <span id="dynamic-ad-sub-left" class="promo-sub">...</span>
-                            </div>
-                        </a>
-                    </div>
-
-                    <!-- Timer (Tengah) -->
+                    <!-- 1. Timer di Kiri -->
                     <div id="timer">60</div>
 
-                    <!-- IKLAN KANAN (Dinamis - BARU) -->
-                    <div class="ad-space right">
-                        <a id="dynamic-ad-link-right" href="#" target="_blank" class="dynamic-ad-btn">
-                            <span id="dynamic-ad-icon-right" class="shopee-icon">🎁</span>
+                    <!-- 2. Iklan Dinamis LEBAR di Kanan -->
+                    <div class="ad-space">
+                        <a id="dynamic-ad-link" href="#" target="_blank" class="dynamic-ad-btn">
+                            <span id="dynamic-ad-icon" class="shopee-icon">✨</span>
                             <div class="ad-text">
-                                <span id="dynamic-ad-title-right" class="promo-title">Loading...</span>
-                                <span id="dynamic-ad-sub-right" class="promo-sub">...</span>
+                                <span id="dynamic-ad-title" class="promo-title">Loading...</span>
+                                <span id="dynamic-ad-sub" class="promo-sub">...</span>
                             </div>
                         </a>
                     </div>
                 </div>
-                <!-- ******************************************* -->
+                <!-- ******************************** -->
 
                 <div class="qa-container">
                     <div id="question-container">
